[tool.poetry]
name = "puff-py"
version = "0.1.4"
description = ""
authors = ["Kyle Hanson <me@khanson.io>"]
license = "MIT"
packages = [{include = "puff", from="."}, {include = "psycopg2", from="."}]

[tool.poetry.dependencies]
python = "^3.10"
greenlet = "^1.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
