[tool.poetry]
name = "hello_world_py_app"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
pytest-django = "^4.5.2"
graphene-django = "^3.0.0"
graphene-django-optimizer = "^0.9.1"
uwsgi = "^2.0.20"
strawberry-django-plus = "^1.28.3"
puff-py = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cargo = "puff.poetry_plugins:cargo"